@@ -73,6 +73,7 @@ public:
     // V70: Image filters definitions hidden, registered names updated to include "Impl"
     // V71: Unify erode and dilate image filters
     // V72: SkColorFilter_Matrix domain (rgba vs. hsla)
+    // V73: Use SkColor4f in per-edge AA quad API
 
     enum Version {
         kTileModeInBlurImageFilter_Version  = 56,
@@ -92,10 +93,11 @@ public:
         kHideImageFilterImpls_Version       = 70,
         kUnifyErodeDilateImpls_Version      = 71,
         kMatrixColorFilterDomain_Version    = 72,
+        kEdgeAAQuadColor4f_Version          = 73,
 
         // Only SKPs within the min/current picture version range (inclusive) can be read.
         kMin_Version     = kTileModeInBlurImageFilter_Version,
-        kCurrent_Version = kMatrixColorFilterDomain_Version
+        kCurrent_Version = kEdgeAAQuadColor4f_Version
     };
 
     static_assert(kMin_Version <= 62, "Remove kFontAxes_bad from SkFontDescriptor.cpp");
